tests/src/frontend/syntax/invalid/duplicate_positional_method_params.sk
class C() {
  fun m(p: Int, p: String): void {
    void
  }
}

fun main(): void {
  print_raw("Fail")
}
